# llmgrep

./: .gitignore  AGENTS.md  ANALYSIS.md  API_INTEGRATION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INVARIANTS.md  LICENSE.md  MANUAL.md  QUALITY_REPORT.md  README.md  deny.toml  manual_audit.context.json  manual_audit.db  syncore_code_graph.db  syncore_code_graph.db-shm  syncore_code_graph.db-wal
.cargo/: config.toml
.github/workflows/: validate.yml
.planning/: ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/017-backend-infrastructure/: 17-02-SUMMARY.md
.planning/phases/018-sqlite-backend-refactor/: 18-01-PLAN.md  18-01-SUMMARY.md  18-02-PLAN.md  18-02-SUMMARY.md  18-03-PLAN.md  18-03-SUMMARY.md  18-04-PLAN.md  18-05-PLAN.md  18-06-PLAN.md  18-CONTEXT.md  18-RESEARCH.md
.planning/phases/019-native-v2-backend-implementation/: 19-01-SUMMARY.md  19-02-SUMMARY.md  19-05-SUMMARY.md
.planning/phases/020-cli-integration/: 20-01-SUMMARY.md  20-02-SUMMARY.md  20-03-SUMMARY.md
.planning/phases/021-native-v2-exclusive-features/: 21-02-SUMMARY.md  21-03-SUMMARY.md
.planning/phases/22-bugfix-production-ready/: 22-02-SUMMARY.md  22-03-SUMMARY.md  PLAN.md
.planning/phases/23-feature-parity-native-v2/: 23-01-SUMMARY.md  PLAN.md
.planning/phases/24-code-quality-polish/: 24-04-SUMMARY.md  24-06-SUMMARY.md  24-07-SUMMARY.md  24-07-VERIFICATION.md  PLAN.md
docs/: BEST_PRACTICES.md  PERFORMANCE.md  TROUBLESHOOTING.md
src/: algorithm.rs  ast.rs  cli.rs  cli_tests.rs  dispatch.rs  display.rs  error.rs  forge.rs  lib.rs  main.rs  output.rs  output_common.rs  platform.rs  query.rs  safe_extraction.rs  watch_cmd.rs
src/algorithm/: magellan_bridge.rs  mod.rs  tests.rs
src/ast/: language.rs  mod.rs  tests.rs
src/backend/: geometric.rs  magellan_adapter.rs  mod.rs  native_v2.rs  native_v3.rs  schema_check.rs  sqlite.rs  vector.rs
src/commands/: ast.rs  complete.rs  evolve.rs  export_symbols.rs  find_ast.rs  lookup.rs  mod.rs  search.rs  stats.rs  vector.rs  watch.rs
src/query/: backend.rs  builder.rs  calls.rs  chunks.rs  docs.rs  evolve.rs  explore.rs  facts.rs  implements.rs  mod.rs  navigate.rs  options.rs  references.rs  semantic.rs  stats.rs  symbols.rs  telemetry.rs  tests.rs  util.rs
src/query/tests/: chunk_tests.rs  metrics_tests.rs  mod.rs  query_builder_tests.rs  scoring_tests.rs  search_calls_tests.rs  search_references_tests.rs  search_symbols_tests.rs  symbol_id_tests.rs  util_tests.rs
tests/: algorithm_tests.rs  ast_tests.rs  backend_detection_test.rs  backend_parity_extended_test.rs  backend_parity_test.rs  cli_integration_test.rs  commands_test.rs  component_integration_geometric.rs  coverage_search_tests.rs  integration_tests.rs  language_detection_test.rs  native_v2_commands_test.rs  native_v3_commands_test.rs  search_tests.rs  shorthand_tests.rs  system_integration_tests.rs  token_budget_tests.rs  unit_integration_geometric.rs  unit_tests.rs
tests/fixtures/: Test.java  test.c  test.cpp  test.js  test.py  test.rs  test.ts
tests/fixtures/databases/: test_py.wal
