[package]
name = "llmgrep"
version = "3.1.2"
edition = "2021"
description = "Smart grep over Magellan code maps with schema-aligned JSON output"
license = "GPL-3.0"
repository = "https://github.com/oldnordic/llmgrep"
documentation = "https://docs.rs/llmgrep"
readme = "README.md"

[features]
# Platform feature model - explicit opt-in required
default = ["unix"]
unix = []
windows = []

# Native-V3 backend support (reserved, currently disabled)
# High-performance binary backend with KV store side tables
# NOTE: Feature defined to silence cfg warnings, but intentionally disabled
# Dependencies are commented out to avoid format conflicts
native-v3 = []
# native-v3 = ["magellan/native-v3", "sqlitegraph/native-v3"]

# Unstable watch command (incomplete, requires unstable Mag APIs)
unstable-watch = []

# Geometric backend support for .geo files (requires unpublished geographdb-core)
# This feature is disabled for crates.io publishing
# geometric-backend = ["magellan/geometric-backend"]
geometric-backend = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
magellan = { version = "3.1", path = "../magellan", features = ["sqlite-backend"] }
regex = "1.10"
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
sqlitegraph = "2.0.7"
tempfile = "3.10"
thiserror = "1.0"

[dev-dependencies]
rusqlite = "0.31"
