[package]
name = "llmgrep"
version = "3.1.7"
edition = "2021"
description = "Smart grep over Magellan code maps with schema-aligned JSON output"
license = "GPL-3.0"
repository = "https://github.com/oldnordic/llmgrep"
documentation = "https://docs.rs/llmgrep"
readme = "README.md"

[features]
# Platform feature model - explicit opt-in required
default = ["unix"]
unix = []
windows = []

# Unstable watch command (incomplete, requires unstable Mag APIs)
unstable-watch = []

# Geometric backend support for .geo files (requires geographdb-core)
geometric-backend = ["magellan/geometric-backend"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
magellan = { version = "3.1.7", features = ["sqlite-backend"] }
regex = "1.10"
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3"
sqlitegraph = "2.0.7"
tempfile = "3.10"
thiserror = "1.0"

[dev-dependencies]
rusqlite = "0.31"
